--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=auction
 spring.data.mongodb.database=auction
+spring.datasource.url=jdbc:mysql://localhost:3306/auctionApp
+spring.datasource.username=admin
+spring.datasource.password=pw123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create
 logging.level.root=DEBUG
