test: Develop.yml 파일 types에 synchronize, reopened 추가

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches:
     - develop
-    types: [created]
+    types: [created, synchronize, reopened]
 
 jobs:
   build:
