--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,6 +8,9 @@
 name: Integration and Deployment
 
 on:
+  push:
+    branches:
+    - develop
   pull_request:
     branches:
     - develop
@@ -41,6 +44,6 @@ jobs:
     # the publishing section of your build.gradle
     - name: Publish to GitHub Packages
       run: ./gradlew publish
-      env:
-        USERNAME: ${{ github.actor }}
-        TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # env:
+      #   USERNAME: ${{ github.actor }}
+      #   TOKEN: ${{ secrets.GITHUB_TOKEN }}
