--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,9 +8,9 @@
 name: Integration and Deployment
 
 on:
-  push:
-    branches:
-    - develop
+  # push:
+  #   branches:
+  #   - develop
   pull_request:
     branches:
     - develop
