--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -11,7 +11,7 @@ on:
   pull_request:
     branches:
       - develop
-    types: [created, synchronize, reopened]
+    types: [opened, synchronize, reopened]
 
 jobs:
   build:
