--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,15 +47,15 @@ jobs:
       env:
         USERNAME: ${{ github.actor }}
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        cloud.aws.credentials.access-key: ${{secret.AWS_ACCESS_KEY}}
-        cloud.aws.credentials.secret-key: ${{secret.AWS_SECRET_KEY}}
-        spring.jwt.secret: ${{secret.JWT_SECRET}}
-        spring.data.mongodb.host: ${{secret.MONGODB_HOST}}
-        spring.data.mongodb.port: ${{secret.MONGODB_PORT}}
-        spring.data.redis.host: ${{secret.REDIS_HOST}}
-        spring.data.redis.port: ${{secret.REDIS_PORT}}
-        spring.datasource.url: ${{secret.MYSQL_URL}}
-        spring.datasource.username: ${{secret.MYSQL_USERNAME}}
-        spring.datasource.password: ${{secret.MYSQL_PASSWORD}}
+        cloud.aws.credentials.access-key: ${{secrets.AWS_ACCESS_KEY}}
+        cloud.aws.credentials.secret-key: ${{secrets.AWS_SECRET_KEY}}
+        spring.jwt.secret: ${{secrets.JWT_SECRET}}
+        spring.data.mongodb.host: ${{secrets.MONGODB_HOST}}
+        spring.data.mongodb.port: ${{secrets.MONGODB_PORT}}
+        spring.data.redis.host: ${{secrets.REDIS_HOST}}
+        spring.data.redis.port: ${{secrets.REDIS_PORT}}
+        spring.datasource.url: ${{secrets.MYSQL_URL}}
+        spring.datasource.username: ${{secrets.MYSQL_USERNAME}}
+        spring.datasource.password: ${{secrets.MYSQL_PASSWORD}}
 
 
