--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -38,7 +38,7 @@ jobs:
         run : chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -i --stacktrace
+        run: ./gradlew build -i
         env:
           USERNAME: ${{ github.actor }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -51,7 +51,8 @@ jobs:
           SPRING_DATA_REDIS_PORT: ${{secrets.REDIS_PORT}}
           SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
           SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
-          SPRING_DATASOURCE_URL: ${{secrets.MYSQL_URL}}
+#          SPRING_DATASOURCE_URL: ${{secrets.MYSQL_URL}}
+          SPRING_DATASOURCE_JDBCURL: ${{secrets.MYSQL_URL}}
           SPRING_DATASOURCE_USERNAME: ${{secrets.MYSQL_USERNAME}}
           SPRING_DATASOURCE_PASSWORD: ${{secrets.MYSQL_PASSWORD}}
 
