--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,27 +8,27 @@
 name: Integration and Deployment
 
 on:
-  pull_request:
+  pull_request: # develop 브랜치로 pull request 이벤트 발생 시 실행
     branches:
       - develop
     types: [opened, synchronize, reopened]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # 실행 환경
     permissions:
       contents: read
       packages: write
 
+    # 작업 실행 단계
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
@@ -38,7 +38,7 @@ jobs:
         run : chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -i
+        run: ./gradlew build -i --debug
         env:
           USERNAME: ${{ github.actor }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -51,8 +51,7 @@ jobs:
           SPRING_DATA_REDIS_PORT: ${{secrets.REDIS_PORT}}
           SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
           SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
-#          SPRING_DATASOURCE_URL: ${{secrets.MYSQL_URL}}
-          SPRING_DATASOURCE_JDBCURL: ${{secrets.MYSQL_URL}}
+          SPRING_DATASOURCE_URL: ${{secrets.MYSQL_URL}}
           SPRING_DATASOURCE_USERNAME: ${{secrets.MYSQL_USERNAME}}
           SPRING_DATASOURCE_PASSWORD: ${{secrets.MYSQL_PASSWORD}}
 
