build with gradle --debug 제거

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -38,7 +38,7 @@ jobs:
         run : chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -i --debug
+        run: ./gradlew build -i
         env:
           USERNAME: ${{ github.actor }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
