--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -50,6 +50,7 @@ jobs:
           SPRING_DATA_REDIS_HOST: ${{secrets.REDIS_HOST}}
           SPRING_DATA_REDIS_PORT: ${{secrets.REDIS_PORT}}
           SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
+          SPRING_JPA_HIBERNATE_DDL_AUTO: create
           SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
           SPRING_DATASOURCE_URL: ${{secrets.MYSQL_URL}}
           SPRING_DATASOURCE_USERNAME: ${{secrets.MYSQL_USERNAME}}
