--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -8,7 +8,7 @@
 name: Integration and Deployment
 
 on:
-  pull_request: # develop 브랜치로 pull request 이벤트 발생 시 실행
+  pull_request_target: # develop 브랜치로 pull request 이벤트 발생 시 실행
     branches:
       - develop
     types: [opened, synchronize, reopened]
@@ -16,9 +16,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest  # 실행 환경
-    permissions:
-      contents: read
-      packages: write
+#    permissions:
+#      contents: read
+#      packages: write
 
     # 작업 실행 단계
     steps:
@@ -38,7 +38,7 @@ jobs:
         run : chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -i
+        run: ./gradlew build
         env:
           USERNAME: ${{ github.actor }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
