--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -52,7 +52,7 @@ jobs:
         run : chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -i
         env:
 #          USERNAME: ${{ github.actor }}
 #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
