--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -52,28 +52,28 @@ jobs:
         run : chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -i
-        env:
-#          USERNAME: ${{ github.actor }}
-#          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CLOUD_AWS_CREDENTIALS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          CLOUD_AWS_CREDENTIALS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          CLOUD_AWS_REGION_STATIC: ap-southeast-2
-          CLOUD_AWS_S3_BUCKET: auction-shop-image
-          SPRING_JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          SPRING_JWT_ACCESSTOKEN_EXPIRATION_TIME: 60000
-          SPRING_JWT_REFRESHTOKEN_EXPIRATION_TIME: 86400000
-          SPRING_DATA_MONGODB_HOST: ${{ secrets.MONGODB_HOST }}
-          SPRING_DATA_MONGODB_PORT: ${{ secrets.MONGODB_PORT }}
-          SPRING_DATA_REDIS_HOST: ${{ secrets.REDIS_HOST }}
-          SPRING_DATA_REDIS_PORT: ${{ secrets.REDIS_PORT }}
-          SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
-          SPRING_JPA_HIBERNATE_DDL_AUTO: create
-          SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
-          SPRING_DATASOURCE_URL: ${{ secrets.MYSQL_URL }}
-          SPRING_DATASOURCE_USERNAME: ${{ secrets.MYSQL_USERNAME }}
-          SPRING_DATASOURCE_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        run: ./gradlew build
+#        env:
+##          USERNAME: ${{ github.actor }}
+##          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#          CLOUD_AWS_CREDENTIALS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+#          CLOUD_AWS_CREDENTIALS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+#          CLOUD_AWS_REGION_STATIC: ap-southeast-2
+#          CLOUD_AWS_S3_BUCKET: auction-shop-image
+#          SPRING_JWT_SECRET: ${{ secrets.JWT_SECRET }}
+#          SPRING_JWT_ACCESSTOKEN_EXPIRATION_TIME: 60000
+#          SPRING_JWT_REFRESHTOKEN_EXPIRATION_TIME: 86400000
+#          SPRING_DATA_MONGODB_HOST: ${{ secrets.MONGODB_HOST }}
+#          SPRING_DATA_MONGODB_PORT: ${{ secrets.MONGODB_PORT }}
+#          SPRING_DATA_REDIS_HOST: ${{ secrets.REDIS_HOST }}
+#          SPRING_DATA_REDIS_PORT: ${{ secrets.REDIS_PORT }}
+#          SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQLDialect
+#          SPRING_JPA_HIBERNATE_DDL_AUTO: create
+#          SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
+#          SPRING_DATASOURCE_URL: ${{ secrets.MYSQL_URL }}
+#          SPRING_DATASOURCE_USERNAME: ${{ secrets.MYSQL_USERNAME }}
+#          SPRING_DATASOURCE_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
 
       - name: Publish to GitHub Packages
-        run: ./gradlew publish
+        run: ./gradlew publish -i
 
