--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -81,8 +81,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: $CLOUD_AWS_CREDENTIALS_ACCESS_KEY
-          aws-secret-access-key: $CLOUD_AWS_CREDENTIALS_SECRET_KEY
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: ap-southeast-2
 
       # Upload to S3 storage
