fix: develop.yml Code Deploy 수정 aws: error: the following arguments are required: --application-name 에러 처리

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -91,7 +91,7 @@ jobs:
 
       # AWS CodeDeploy 실행
       - name: Code Deploy
-        run: |
+        run:
           aws deploy create-deployment \ 
             --application-name ApplicationCodeDeploy \
             --deployment-config-name CodeDeployDefault.AllAtOnce \
