--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -91,8 +91,8 @@ jobs:
 
       # AWS CodeDeploy 실행
       - name: Code Deploy
-        run:
-          aws deploy create-deployment \ 
+        run: |
+          aws deploy create-deployment \
             --application-name ApplicationCodeDeploy \
             --deployment-config-name CodeDeployDefault.AllAtOnce \
             --deployment-group-name ApplicationCodeDeployGroup \
