--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -79,7 +79,7 @@ jobs:
         run : chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew build -i
+        run: ./gradlew build
 
       # .zip으로 압축
       # 현재 디렉토리의 파일과 하위 디렉토리를 압축
