fix: appspec.yml 파일 수정 덮어쓰기를 통해 배포 과정의 install 실패 해결 중

--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ os: linux
 files:
   - source: /
     destination: /home/ec2-user/applications
-
+file_exists_behavior: OVERWRITE
 # 현재 경로의 deploy.sh 파일 실행
 hooks:
   AfterInstall:
