fix: develop.yml 수정 Set YML 과정 추가

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -78,6 +78,12 @@ jobs:
       - name : Grant Execution Permission
         run : chmod +x ./gradlew
 
+      - name: Set YML
+        run: |
+          mkdir -p src/main/resources
+          echo "${{ secrets.APPLICATION_YML }}" | base64 --decode > src/main/resources/application.yml
+          find src
+
       - name: Build with Gradle
         run: ./gradlew build
 
