--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 	//iamport
 	implementation 'com.github.iamport:iamport-rest-client-java:0.2.21'
 
+	//ElasticSearch
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	runtimeOnly 'com.mysql:mysql-connector-j'
