--- a/.gitignore
+++ b/.gitignore
@@ -321,5 +321,5 @@ gradle-app.setting
 ### Gradle Patch ###
 # Java heap dump
 *.hprof
-
+application.yml
 # End of https://www.toptal.com/developers/gitignore/api/intellij,intellij+all,gradle,windows,macos,java
